# wheels

./: CMakeLists.txt  README.md
cmake/: Arch.cmake  CompileOptions.cmake  Logging.cmake  Processor.cmake
docs/: test.md
tests/: CMakeLists.txt  assert.cpp  bithacks.cpp  buffer.cpp  cpu.cpp  cpu_time.cpp  defer.cpp  env.cpp  error.cpp  exception.cpp  hash.cpp  intrusive_list.cpp  io.cpp  mem_view.cpp  memspan.cpp  mmap.cpp  noncopyable.cpp  one_shot_event.cpp  panic.cpp  progress.cpp  random.cpp  result.cpp  singleton.cpp  size_literals.cpp  source_location.cpp  stop_watch.cpp  string_utils.cpp  sync_output.cpp  test_bithacks.cpp  test_error.cpp  test_exchange.cpp  test_framework.cpp  test_function.cpp  test_intrusive_list.cpp  test_one_shot_event.cpp  test_progress.cpp  test_result.cpp  test_test_framework.cpp  test_time.cpp  test_unit.cpp  (+3 more)
tests/core/: assert.cpp  defer.cpp  exception.cpp  hash.cpp  noncopyable.cpp  panic.cpp  singleton.cpp  size_literals.cpp  source_location.cpp  stop_watch.cpp  string_utils.cpp  unit.cpp
tests/intrusive/: forward_list.cpp  list.cpp
tests/memory/: buffer.cpp  view.cpp
tests/support/: bithacks.cpp  concepts.cpp  progress.cpp
tests/system/: env.cpp  mmap.cpp
tests/test/: cpu_time.cpp  sync_output.cpp  test_framework.cpp
wheels/: CMakeLists.txt
wheels/cmdline/: argparse.cpp  argparse.hpp
wheels/core/: assert.hpp  defer.hpp  exception.cpp  noncopyable.hpp  nullptr.cpp  nullptr.hpp  panic.cpp  panic.hpp  preprocessor.hpp  sanitizers.hpp  size_literals.hpp  source_location.cpp  source_location.hpp  stop_watch.hpp  string_builder.hpp  string_utils.cpp  string_utils.hpp  unit.hpp
wheels/intrusive/: forward_list.hpp  list.hpp
wheels/io/: buffered.hpp  limit.hpp  memory.hpp  read.cpp  read.hpp  reader.hpp  string.hpp  write.cpp  write.hpp  writer.hpp
wheels/logging/: logging.cpp  logging.hpp
wheels/memory/: buffer.hpp  mmap_allocation.cpp  mmap_allocation.hpp  page_size.cpp  page_size.hpp  view.hpp  view_of.hpp
wheels/result/: error.hpp  make.cpp  make.hpp  result.hpp
wheels/support/: argparse.cpp  argparse.hpp  args.cpp  args.hpp  assert.hpp  bithacks.hpp  compiler.hpp  concepts.hpp  cpu.hpp  cpu_time.hpp  defer.hpp  env.cpp  env.hpp  error.hpp  exception.cpp  exception.hpp  exchange.hpp  fork.cpp  fork.hpp  function.hpp  function2.hpp  function_meta.hpp  hash.hpp  hash_combine.hpp  id.cpp  id.hpp  intrusive_list.hpp  leaks.hpp  locking.hpp  map.hpp  mem_view.hpp  mem_view_of.hpp  memspan.hpp  mmap_allocation.cpp  mmap_allocation.hpp  noncopyable.hpp  nullptr.cpp  nullptr.hpp  one_shot_event.hpp  panic.cpp  (+29 more)
wheels/system/: env.cpp  env.hpp  mmap.cpp  mmap.hpp  page_size.cpp  quick_exit.cpp  quick_exit.hpp
wheels/test/: assert_failure.cpp  assert_failure.hpp  console_reporter.cpp  console_reporter.hpp  context.hpp  cpu_time.hpp  current.hpp  emoji.cpp  emoji.hpp  execute_test.cpp  execute_test.hpp  execute_test_here.cpp  execute_test_here.hpp  fail_handler.cpp  fail_handler.hpp  filter.cpp  filter.hpp  fork.cpp  fork.hpp  framework.cpp  framework.hpp  helpers.cpp  helpers.hpp  here.cpp  here.hpp  iterate.cpp  iterate.hpp  main.cpp  main.hpp  registry.cpp  registry.hpp  reporter.hpp  run_test.cpp  run_test.hpp  runtime.cpp  runtime.hpp  sanitizers.cpp  sanitizers.hpp  test.cpp  test.hpp  (+9 more)
wheels/test/support/: cpu_time.hpp  fork.cpp  fork.hpp  quick_exit.cpp  sanitizers.cpp  sanitizers.hpp  sync_output.cpp  terminal.cpp  terminal.hpp
wheels/test/util/: cpu_time_budget.hpp  cpu_timer.hpp
